--- a/src/kunz_anastasia_a4_task2.Rmd
+++ b/src/kunz_anastasia_a4_task2.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "Wild Fish Catch"
+title: "Global Wild Fish Catch Analysis"
 author: "Anastasia Kunz"
 date: "3/2/2021"
 output:
   html_document:
+    theme: flatly
     code_folding: hide
 ---
 
@@ -15,12 +16,11 @@ library(janitor)
 library(nlstools)
 library(tsibble)
 library(lubridate)
+library(gt)
 ```
 
 
-## Wild Fish Catch Analysis
-
-Breif blurb about wild fish catch.
+This analysis utilizes nonlinear least squares to analyze the Earth Policy Institute's 1950 - 2012 wild fish catch data from the U.N. Food and Agriculture Organization. 
 
 ```{r}
 fish_catch <- read_csv(here("data", "fish_catch.csv"), skip = 4) %>% 
@@ -32,7 +32,7 @@ fish_catch <- read_csv(here("data", "fish_catch.csv"), skip = 4) %>%
 
 ```
 
-### Data Exploration: Wild Fish Catch Time Series
+### Data Exploration: Wild Fish Catch Time Series & Parameter Estimation
 
 ```{r}
 # make time series of fish catch
@@ -47,43 +47,124 @@ ggplot(fish_catch, aes(x = year, y = wild_catch))+
   )
 ```
 
-Can see a general increasing trend through time, which looks roughly like logistic growth.
+This time series shows a general increasing trend through time, which looks roughly like logistic growth. The data set, starting at 1950, shows initial wild fish catch at around 10 million tons. Wild fish catch increases near exponentially until around 1980, where catch starts to level off at around 95 million tons.
 
-Therefore, we will use $P(t)=\frac{K}{1+Ae^{-kt}}$  and estimate our parameters based off of the graph above.
+Therefore, we can use $P(t)=\frac{K}{1+Ae^{-kt}}$ as our equation for wild fish catch through time and estimate parameters based off of the graph above.
 
 **K Estimate**
 
 Wild fish catch levels off around 1990, at about 90 to 95 million tons of wild fish catch per year. *So the estimate for K will be 95 million tons.*
 
+**A Estimate**
+
+Based on our equation where $A$ = $\frac{K-P_0}{P_0}$, the population at "time zero" or in 1950 is around 10 million tons. So we can *estimate A to be* $\frac{95 - 10}{10}$ *= about 8.5.*
 
 **k Estimate**
 
-We can estimate *k* by looking at the log of wild fish catch pre 1990 to find the growth rate. *Here we estimate it as 0.036.*
+We can estimate *k* by looking at the log of wild fish catch pre 1990 (shown below) to find the growth rate. *Here we estimate k to be 0.035623.*
 
 ```{r}
+
+ # look at data to get a sense of how to estimate k
+ggplot(data = fish_catch, aes(x = year, y = log(wild_catch))) +
+  geom_point() +
+  theme_minimal()+
+  labs(
+    x = "Log of Wild Fish Catch",
+    y = "Year",
+    title = "Log Transformed Wild Fish Catch by Year"
+  )
+
+
 fish_exp <- fish_catch %>% 
-  filter(year < 1985) %>% 
+  filter(year < 1990) %>% 
   mutate(ln_fish = log(wild_catch))
 
 lm_fish <- lm(ln_fish ~ year, data = fish_exp)
 
+
 ```
 
 
-**A Estimate**
-Based on our equation where $A$ = $\frac{K-P_0}{P_0}$ we can estimate A to be $\frac{95 - 5}{5}$ = *about 18.*
 
 
+```{r, results = FALSE}
+
+#update to year starting at 0 instead of 1950
+
+fish_catch_nls <- fish_catch %>% 
+  mutate(year = (year - 1950))
+
+fish_nls <- nls(wild_catch ~ K/(1 + A*exp(-r*year)),
+              data = fish_catch_nls,
+              start = list(K = 95, A = 8.5, r = 0.035623),
+              trace = TRUE
+              )
+
+#summary(fish_nls)
+
+fish_output <- broom::tidy(fish_nls) 
+
+A_estimate <- fish_output$estimate[2]
+```
+
+
+
+
+### Nonlinear Least Squares Model Outputs and Prediction
+
+Using nonlinear least squares, the graph and table below shows the model outputs and visualization of the nonlinear least squares prediction.
+
+#### Table of Results
 
 ```{r}
-#df_nls <- nls(pop ~ K/(1 + A*exp(-r*time)),
-   #           data = df,
-   #           start = list(K = 180, A = 17, r = 0.17),
-   #           trace = TRUE
-   #           )
+fish_output %>% 
+  gt() %>% 
+  tab_header(
+    title = "Nonlinear Least Squares Model Outputs"
+  ) %>% 
+  fmt_number(
+    columns = vars(estimate, std.error, statistic),
+    decimals = 2
+  ) %>% 
+  fmt_scientific(
+    columns = vars(p.value),
+    decimals = 2
+  ) %>% 
+  tab_options(table.width = pct(70)) %>% 
+  cols_label(
+    term = "Term",
+    estimate = "Estimate",
+    std.error = "Standard Error",
+    statistic = "Statistic",
+    p.value = "P-Value"
+  )
+
 ```
 
 
+
+#### Visualization of Prediction and Original Data
+
+```{r}
+fish_predict <- predict(fish_nls)
+
+# combine data frames into one to plot
+fish_catch_complete <- data.frame(fish_catch, fish_predict)
+
+ggplot(data = fish_catch_complete, aes(x = year, y = wild_catch)) +
+  geom_point() +
+  geom_line(aes(x = year, y = fish_predict), color  = "darkred") +
+  theme_classic()+
+  labs(
+    x = "Year",
+    y = "Wild Catch (Million Tons)",
+    title = "Global Wild Fish Catch and Nonlinear Least Squares Model",
+    subtitle = "1950 - 2012"
+  )+
+  theme(panel.grid.major = element_line())
+
+```
 
 
 
