--- a/src/kunz_anastasia_a4_task3.Rmd
+++ b/src/kunz_anastasia_a4_task3.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exclusionary Experience Analysis using Bootstrapping"
+title: "Exclusionary Analysis using Bootstrapping"
 author: "Anastasia Kunz"
 date: "3/2/2021"
 output:
@@ -24,7 +24,7 @@ library(broom)
 # create vector of "yes" reported exclusionary experiences (1) or "no" did not report exclusionary experiences (0)
 excluded <- c(1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0)
 
-# create function to calculate proportion: need to add all up and divide by 36, then multiply by 100
+# create function to calculate proportion: need to add all up and divide by 36
 proportion_fun <- function (x,i) {sum(x[i])/36}
 
 # bootstrap 100,000
@@ -52,14 +52,14 @@ ggplot(data = exclude_100k, aes(x = prop))+
 # get confidence interval
 confidence <-boot.ci(boot_100k, conf = 0.95)
 
-#want to know the mean of the bootstrapped proportions
+# I want to know the mean of the bootstrapped proportions
 tidy_boot_avg <- tidy_boot %>%
   mutate(mean = mean(boot_100k$t))
   
 
 ```
 
-According to this analysis using bootstrapping, an average of `r round(tidy_boot_avg[4]*100, 2)`% (n = 36, n = 100,000 bootstrap samples) of genderqueer students reported exclusionary experiences, with a confidence interval of [44.44, 77.78]. The bootstrapped results had a bias of `r round(tidy_boot_avg[2],5)` and a standard error of `r round(tidy_boot_avg[3], 3)`.
+According to this analysis using bootstrapping, an average of `r round(tidy_boot_avg[4]*100, 2)`% (n = 36, n = 100,000 bootstrap samples) of genderqueer students reported exclusionary experiences, with a confidence interval of [44.44, 77.78]. The bootstrapped results had a bias of `r tidy_boot_avg[2]` and a standard error of `r round(tidy_boot_avg[3], 3)`.
 
 ```{r}
 tidy_boot_avg %>% 
